--- a/Project_V17/Pages/Index.cshtml
+++ b/Project_V17/Pages/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div style="padding-left:250px">
 <h3>Further Study Portal</h3>
-<p> Please Register to begin an application or Sign In to continue/update a current application</p>
+<p> Please Register or Sign In to begin an application</p>
 
 
 </div>
