--- a/Project_V17/Pages/Shared/_Layout.cshtml
+++ b/Project_V17/Pages/Shared/_Layout.cshtml
@@ -1,5 +1,5 @@
 ﻿
-
+@inject SignInManager<IdentityUser> _signInManager
 <!DOCTYPE html>
 <html>
 <head>
@@ -29,15 +29,22 @@
                 </button>
                 <a asp-page="/Index" class="navbar-brand">Further Study Portal</a>
             </div>
+           
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+
+
+
+
                     <li><a asp-page="/Index">Home</a></li>
                     <li><a asp-page="/Policy">Policy</a></li>
+                   @if (_signInManager.IsSignedIn(User))
+                    {
                     <li><a asp-page="/ApplicationCreate">Make an Application</a></li>
                     <li><a asp-page="/Contact">Contact</a></li>
-                    
-                    </ul>
-               
+                         }
+                </ul>
+
                 <partial name="_LoginPartial" />
             </div>
         </div>
